# workstation

./: .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  README.md  TOOLS.md  bootstrap.sh  justfile  packages.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: terminal-command-discovery.md
dotfiles/config/: TERMINAL_GUIDE.md
dotfiles/config/.config/atuin/: config.toml
dotfiles/config/.config/ghostty/: config
dotfiles/config/.config/navi/: config.yaml
dotfiles/config/.config/nvim/: init.lua  lazy-lock.json  lazyvim.json  mason-tools.txt
dotfiles/config/.config/oh-my-posh/: base.json
dotfiles/git/: .gitconfig
dotfiles/vim/: .vimrc
dotfiles/zsh/: .zshrc
macos/: settings.toml
tests/: test_dashboard.py  test_doctor.py  test_dotfiles_add.py  test_dotfiles_remove.py  test_dotfiles_sync.py  test_invariants.py  test_logging.py  test_macos.py  test_manifest.py  test_manifest_command.py  test_platform.py  test_preferences.py  test_prompts.py  test_render.py  test_summaries.py
wkst/: __init__.py  bootstrap.py  cli.py  dotfiles.py  install_menu.py  install_pipeline.py  logging.py  macos.py  manifest.py  platform.py  plugins.py  preferences.py  process.py  render.py  selection.py  tui.py
wkst/backends/: __init__.py  apt.py  brew.py  cargo.py  claude.py  npm.py  pipx.py
wkst/commands/: __init__.py  add.py  clean.py  common.py  diff.py  doctor.py  help.py  install.py  macos.py  manifest.py  remove.py  sync.py  uninstall.py  update.py
wkst/dashboard/: __init__.py  actions.py  app.py
(+13 files in other folders)
